@@ -26,7 +26,7 @@ MinSpareServers  5
 MaxSpareServers 10
 </IfModule>
 
-<IfModule mpmt_pthread.c>
+<IfModule threaded.c>
 MaxClients       8
 StartServers     1
 MinSpareThreads  5
