@@ -125,7 +125,7 @@ MaxRequestsPerChild  0
 # MaxSpareThreads ...... maximum  number of worker threads which are kept spare
 # ThreadsPerChild ...... constant number of worker threads in each server process
 # MaxRequestsPerChild .. maximum  number of requests a server process serves
-<IfModule mpmt_pthread.c>
+<IfModule threaded.c>
 StartServers         5
 MaxClients           8
 MinSpareThreads      5
