@@ -28,7 +28,7 @@ directives</A>.
 <DL>
 <DT><A HREF="core.html">Core</A>
 <DD>Core Apache features.
-<DT><A HREF="mpmt_pthread.html">mpmt_pthread</A>
+<DT><A HREF="threaded.html">threaded</A>
 <DD>Multi-Processing Module with Threading via Pthreads; Variable number
 of processes, constant number of threads/child
 <DT><a href="mpm_winnt.html">mpm_winnt</a>
