@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <HTML>
 <HEAD>
-<TITLE>Apache MPM mpmt_pthread</TITLE>
+<TITLE>Apache MPM threaded</TITLE>
 </HEAD>
 
 <!-- Background white, links blue (unvisited), navy (visited), red (active) -->
@@ -14,7 +14,7 @@
 >
 <!--#include virtual="header.html" -->
 
-<H1 ALIGN="CENTER">Multi-Processing Module mpmt_pthread</H1>
+<H1 ALIGN="CENTER">Multi-Processing Module threaded</H1>
 <P>
 This Multi-Processing Module implements a hybrid multi-threaded
 multi-process web server.
@@ -28,12 +28,12 @@ REL="Help"
 <A
 HREF="module-dict.html#SourceFile"
 REL="Help"
-><STRONG>Source File:</STRONG></A> mpmt_pthread.c
+><STRONG>Source File:</STRONG></A> threaded.c
 <BR>
 <A
 HREF="module-dict.html#ModuleIdentifier"
 REL="Help"
-><STRONG>Module Identifier:</STRONG></A> mpm_mpmt_pthread_module
+><STRONG>Module Identifier:</STRONG></A> mpm_threaded_module
 </P>
 
 <H2>Summary</H2>
