@@ -46,7 +46,7 @@ MPMs.</li>
 <li>The server can be better customized for the needs of the
 particular site.  For example, sites that need a great deal of
 scalability can choose to use a threaded MPM like <a
-href="mod/mpmt_pthread.html">mpmt_pthread</a>, while sites requiring
+href="mod/threaded.html">threaded</a>, while sites requiring
 stability or compatibility with older software can use a <a
 href="mod/prefork.html">preforking MPM</a>.  In addition, special
 features like serving different hosts under different userids
@@ -79,7 +79,7 @@ every module that is compiled into the server, including the MPM.</p>
 <ul>
   <li> BeOS:  mpmt_beos</li>
   <li> OS/2:  spmt_os2</li>
-  <li> Unix:  mpmt_pthread </li>
+  <li> Unix:  threaded </li>
   <li> Windows:  winnt</li>
 </ul>
 
